--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -67,3 +67,7 @@ bar {
 }
 
 include /etc/sway/config.d/*
+
+exec swayidle -w timeout 300 'swaylock -f -c 000000' \
+    timeout 600 'swaymsg "output * dpms off"' resume \
+	'swaymsg "output * dpms on"' before-sleep 'swaylock -f -c 000000'
