--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,5 +1,7 @@
 # vim:fileencoding=utf-8:ft=conf:foldmethod=marker
 
+include ./theme.conf
+
 #: Fonts {{{
 
 #: kitty has very powerful font management. You can configure
@@ -23,7 +25,7 @@ font_family      JetBrainsMono Nerd Font
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-# font_size 11.0
+font_size 11.0
 
 #: Font size (in pts)
 
@@ -494,7 +496,7 @@ font_family      JetBrainsMono Nerd Font
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
-# hide_window_decorations no
+hide_window_decorations yes
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only can be used to only hide the titlebar.
