--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -527,7 +527,7 @@ hide_window_decorations yes
 #: when resizing the OS window. Note that this does not currently work
 #: on Wayland.
 
-# confirm_os_window_close 0
+confirm_os_window_close 0
 
 #: Ask for confirmation when closing an OS window or a tab that has at
 #: least this number of kitty windows in it. A value of zero disables
@@ -1207,7 +1207,7 @@ include theme.conf
 
 # map kitty_mod+e kitten hints
 #
-map ctrl+k kitten ~/src/py/main.py
+# map ctrl+k kitten ~/src/py/main.py
 
 #: Open a currently visible URL using the keyboard. The program used
 #: to open the URL is specified in open_url_with.
