--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -1,27 +1,27 @@
 {
     // "layer": "top", // Waybar at top layer
     // "position": "left", // Waybar position (top|bottom|left|right)
-    "height": 30, // Waybar height (to be removed for auto height)
+    "height": 25, // Waybar height (to be removed for auto height)
     // "width": 25, // Waybar width
     // Choose the order of the modules
     "modules-left": ["sway/workspaces", "sway/mode", "custom/media", "cpu", "memory", "temperature"],
     "modules-center": ["sway/window"],
-    "modules-right": ["custom/clock", "idle_inhibitor", "pulseaudio", "network", "backlight", "battery", "tray"],
+    "modules-right": ["custom/clock", "pulseaudio", "network", "backlight", "battery", "tray"],
     // Modules configuration
     "sway/workspaces": {
         "disable-scroll": true,
         "all-outputs": true,
         "format": "{icon}",
         "format-icons": {
-            "1": "1",
-            "2": "2",
-            "3": "3",
-            "4": "4",
-            "5": "5",
-            "6": "6",
-            "7": "7",
-            "8": "8",
-            "9": "9",
+            "1": "I",
+            "2": "II",
+            "3": "III",
+            "4": "IV",
+            "5": "V",
+            "6": "VI",
+            "7": "VII",
+            "8": "VIII",
+            "9": "IX",
             "urgent": "",
             "focused": "",
             "default": ""
@@ -38,7 +38,6 @@
         }
     },
     "tray": {
-        // "icon-size": 21,
         "spacing": 0
     },
     "custom/clock": {
@@ -54,10 +53,7 @@
         "format": "{}% "
     },
     "temperature": {
-        // "thermal-zone": 2,
-        // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
         "critical-threshold": 70,
-        // "format-critical": "{temperatureC}°C {icon}",
         "format": "{temperatureC}°C {icon}",
         "format-icons": ["", "", ""]
     },
