--- a/tofi/.config/tofi/config
+++ b/tofi/.config/tofi/config
@@ -6,11 +6,11 @@ border-width = 3
 outline-width = 0
 padding-left = 1%
 padding-top = 1%
-result-spacing = 8
-num-results = 8
+result-spacing = 6
+num-results = 6
 background-color = "#1a1a24"
 border-color = "#ebb9b9"
 text-color = "#a7b7d6"
 selection-color = "#ebb9b9"
 selection-match-color = "#eac1c100"
-prompt-text = "ﬦ "
+prompt-text = " "
