--- a/tofi/.config/tofi/config
+++ b/tofi/.config/tofi/config
@@ -1,5 +1,5 @@
-font = "/home/munkus/.local/share/fonts/JetBrains Mono Regular Nerd Font Complete.ttf"
-font-size = 16
+font = "/home/munkus/.local/share/fonts/Caskaydia Cove Nerd Font Complete Mono Regular.otf"
+font-size = 18
 height = 25%
 width = 30%
 border-width = 3
