--- a/tofi/.config/tofi/config
+++ b/tofi/.config/tofi/config
@@ -8,9 +8,9 @@ padding-left = 1%
 padding-top = 1%
 result-spacing = 6
 num-results = 6
-background-color = "#1a1a24"
-border-color = "#ebb9b9"
-text-color = "#a7b7d6"
-selection-color = "#ebb9b9"
-selection-match-color = "#eac1c100"
+background-color = "#1e1e2e"
+border-color = "#b4befe"
+text-color = "#cdd6f4"
+selection-color = "#b4befe"
+selection-match-color = "#cba6f7"
 prompt-text = " "
