--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -4,7 +4,7 @@
 	"height": 25, // Waybar height (to be removed for auto height)
 	"modules-left": ["sway/workspaces", "cpu", "memory", "temperature", "custom/media", "sway/mode"],
 	"modules-center": ["sway/window"],
-	"modules-right": ["pulseaudio", "network", "backlight", "battery", "custom/clock", "tray"],
+	"modules-right": ["tray", "pulseaudio", "network", "backlight", "battery", "custom/clock"],
 	// Modules configuration
 	"sway/workspaces": {
 		"disable-scroll": true,
@@ -36,7 +36,7 @@
 		}
 	},
 	"tray": {
-		"spacing": 0
+		"spacing": 10
 	},
 	"custom/clock": {
 		"exec": "date +'%I:%M:%S %p'",
