--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -21,7 +21,8 @@ gaps outer 4
 
 # Output configuration
 output {
-	* bg $HOME/.config/sway/wallpapers/catppuccin/misc/Street.jpg stretch
+	# * bg $HOME/.config/sway/wallpapers/catppuccin/misc/Street.jpg stretch
+	* bg $HOME/Pictures/wallpapers/japanese-street.webp stretch
 	$laptop position 0,0
 	HDMI-A-1 position 1920,0
 }
@@ -32,9 +33,9 @@ input type:touchpad {
 }
 
 # target                 title     bg    text   indicator  border
-client.focused           $pink     $base $text  $rosewater $pink
-client.focused_inactive  $mauve    $base $text  $rosewater $overlay0
-client.unfocused         $mauve    $base $text  $rosewater $overlay0
+client.focused           $mauve    $base $text  $rosewater $mauve
+client.focused_inactive  $base     $base $text  $rosewater $base
+client.unfocused         $base     $base $text  $rosewater $base
 client.urgent            $peach    $base $peach $overlay0  $peach
 client.placeholder       $overlay0 $base $text  $overlay0  $overlay0
 client.background        $base
