--- a/tofi/.config/tofi/config
+++ b/tofi/.config/tofi/config
@@ -1,4 +1,4 @@
-font = "/home/munkus/.local/share/fonts/Caskaydia Cove Nerd Font Complete Mono Regular.otf"
+font = "/home/munkus/.local/share/fonts/JetBrainsMonoNerdFont-Regular.ttf"
 font-size = 18
 height = 25%
 width = 30%
@@ -7,7 +7,7 @@ outline-width = 0
 padding-left = 1%
 padding-top = 1%
 result-spacing = 6
-num-results = 6
+num-results = 5
 background-color = "#1e1e2e"
 border-color = "#b4befe"
 text-color = "#cdd6f4"
